--- a/public/src/stylus/account.styl
+++ b/public/src/stylus/account.styl
@@ -18,7 +18,7 @@
 			padding: .5rem 1rem;
 	&__form
 		margin 1rem
-		
+
 .account
 	max-width max-width
 	margin auto
@@ -27,13 +27,14 @@
 	&__menu
 		padding-top 3.25rem
 		position absolute
+		// display none
 		.filter
 			margin 1rem
 			border solid 1px #ddd
 			width auto
 	&__data
 		flex 1
-		
+
 @media (min-width: tablet-medium)
 	.section-edit
 		&__title
