--- a/public/src/stylus/elements/texts.styl
+++ b/public/src/stylus/elements/texts.styl
@@ -6,13 +6,13 @@
 	font-size 1rem
 	letter-spacing .5px
 	font-family 'Roboto Condensed'
-	
+
 .skinny-text[data-color='light']
 	color #aaa
-	
+
 .skinny-text[data-size='small']
 	font-size .85rem
-	
+
 
 /*------------------------------------*
 	$ MEDIUM TEXT
@@ -24,7 +24,7 @@
 	letter-spacing 1px
 	font-family 'Raleway'
 	text-transform uppercase
-	
+
 
 /*------------------------------------*
 	$ SEPARATOR TEXT
@@ -43,7 +43,7 @@
 		background #eee
 	.text
 		padding 0 1em
-		
+
 
 /*------------------------------------*
 	$ ITALIC TEXT
@@ -58,13 +58,13 @@
 	a
 		display inline-block
 		font-weight bold
-	
+
 .italic-text[data-size='small']
 	font-size .9rem
-	
+
 .italic-text[data-color='light']
 	color #aaa
-	
+
 
 /*------------------------------------*
 	$ SECTION TITLE TEXT
@@ -73,8 +73,9 @@
 	font-family 'Oswald'
 	font-size 1.5rem
 	color #585858
-	letter-spacing 0.5px
-	
+	// letter-spacing 0.5px
+	letter-spacing 1px
+
 
 /*------------------------------------*
 	$ NAVIGATION TEXT
@@ -85,7 +86,7 @@
 	font-family 'Raleway'
 	font-weight 600
 	letter-spacing 1px
-	
+
 
 /*------------------------------------*
 	$ HIGHT TEXT
@@ -118,8 +119,8 @@
 	color #585858
 	letter-spacing .5px
 	line-height 1em
-	
-	
+
+
 /*------------------------------------*
 	$ SINGLE PRODUCT TEXT
 *------------------------------------*/
