--- a/public/css/products.css
+++ b/public/css/products.css
@@ -142,7 +142,7 @@ input[type="submit"] {
   font-family: 'Oswald';
   font-size: 1.5rem;
   color: #585858;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .navigation-text {
   font-family: 'Oswald';
@@ -855,7 +855,7 @@ body {
 }
 .section__title {
   margin: auto;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   text-align: center;
   max-width: 1100px;
 }
@@ -906,6 +906,10 @@ body {
 }
 .section__filters .button-filter {
   margin: 0.5rem 1rem;
+}
+.section__filters .button-filter.active {
+  background: #78909c;
+  color: #fff;
 }
 .section__workspace {
   margin: auto;
@@ -1001,15 +1005,38 @@ body {
     -o-transition: padding 0.5s;
     -ms-transition: padding 0.5s;
     transition: padding 0.5s;
+    padding-left: 10rem;
   }
   .section__workspace__elements.moveLeft {
-    padding-left: 10rem;
+    padding-left: 0;
   }
   .section__workspace__elements.moveRight {
     padding-right: 10rem;
   }
   .filter {
     width: 9rem;
+  }
+  .section__workspace__filter:nth-child(1) {
+    -webkit-transform: translate(0%, 0);
+    -moz-transform: translate(0%, 0);
+    -o-transform: translate(0%, 0);
+    -ms-transform: translate(0%, 0);
+    transform: translate(0%, 0);
+  }
+  .section__workspace__filter:nth-child(1).visible {
+    -webkit-transform: translate(-120%, 0);
+    -moz-transform: translate(-120%, 0);
+    -o-transform: translate(-120%, 0);
+    -ms-transform: translate(-120%, 0);
+    transform: translate(-120%, 0);
+  }
+  .section__filters .button-filter:nth-child(2) {
+    background: #78909c;
+    color: #fff;
+  }
+  .section__filters .button-filter:nth-child(2).active {
+    background: #fff;
+    color: #000;
   }
 }
 @media (min-width: 720px) {
@@ -1406,7 +1433,7 @@ body {
   }
 }
 @media screen and (min-width: 1100px) {
-  .products.moveLeft .product-wrapper {
+  .products .product-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
@@ -1421,20 +1448,30 @@ body {
     -moz-box-flex: 1;
     -o-box-flex: 1;
     box-flex: 1;
-    -webkit-flex: 1 25%;
-    -ms-flex: 1 25%;
-    flex: 1 25%;
-    max-width: 25%;
+    -webkit-flex: 1 33.333%;
+    -ms-flex: 1 33.333%;
+    flex: 1 33.333%;
+    max-width: 33.333%;
+  }
+  .products.moveLeft .product-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 20%;
+    -ms-flex: 1 20%;
+    flex: 1 20%;
+    max-width: 20%;
   }
   .products.moveLeft.moveRight .product-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
     box-flex: 1;
-    -webkit-flex: 1 33.333%;
-    -ms-flex: 1 33.333%;
-    flex: 1 33.333%;
-    max-width: 33.333%;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
   }
 }
 .collect {
