--- a/public/css/works.css
+++ b/public/css/works.css
@@ -142,7 +142,7 @@ input[type="submit"] {
   font-family: 'Oswald';
   font-size: 1.5rem;
   color: #585858;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .navigation-text {
   font-family: 'Oswald';
@@ -858,7 +858,7 @@ body {
 }
 .section__title {
   margin: auto;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   text-align: center;
   max-width: 1100px;
 }
@@ -909,6 +909,10 @@ body {
 }
 .section__filters .button-filter {
   margin: 0.5rem 1rem;
+}
+.section__filters .button-filter.active {
+  background: #78909c;
+  color: #fff;
 }
 .section__workspace {
   margin: auto;
@@ -1004,15 +1008,38 @@ body {
     -o-transition: padding 0.5s;
     -ms-transition: padding 0.5s;
     transition: padding 0.5s;
+    padding-left: 10rem;
   }
   .section__workspace__elements.moveLeft {
-    padding-left: 10rem;
+    padding-left: 0;
   }
   .section__workspace__elements.moveRight {
     padding-right: 10rem;
   }
   .filter {
     width: 9rem;
+  }
+  .section__workspace__filter:nth-child(1) {
+    -webkit-transform: translate(0%, 0);
+    -moz-transform: translate(0%, 0);
+    -o-transform: translate(0%, 0);
+    -ms-transform: translate(0%, 0);
+    transform: translate(0%, 0);
+  }
+  .section__workspace__filter:nth-child(1).visible {
+    -webkit-transform: translate(-120%, 0);
+    -moz-transform: translate(-120%, 0);
+    -o-transform: translate(-120%, 0);
+    -ms-transform: translate(-120%, 0);
+    transform: translate(-120%, 0);
+  }
+  .section__filters .button-filter:nth-child(2) {
+    background: #78909c;
+    color: #fff;
+  }
+  .section__filters .button-filter:nth-child(2).active {
+    background: #fff;
+    color: #000;
   }
 }
 @media (min-width: 720px) {
