--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -161,7 +161,8 @@
 		display block
 		color #444
 		&.selected
-			background rgb(237, 237, 237)
+			// background rgb(237, 237, 237)
+			background: #FFF59D;
 
 	&__price
 		padding 1rem 1rem 2rem 1rem
