--- a/public/src/stylus/objects/products.styl
+++ b/public/src/stylus/objects/products.styl
@@ -108,10 +108,10 @@ product-width = 180px
 			flex 1 25%
 			max-width 25%
 
-	.products.moveRight
-		.product-wrapper
-			flex 1 33.333%
-			max-width 33.333%
+	// .products.moveRight
+	// 	.product-wrapper
+	// 		flex 1 33.333%
+	// 		max-width 33.333%
 
 	.products.moveLeft
 		.product-wrapper
@@ -119,10 +119,10 @@ product-width = 180px
 			max-width 20%
 
 
-	.products.moveLeft.moveRight
-		.product-wrapper
-			flex 1 25%
-			max-width 25%
+	// .products.moveLeft.moveRight
+	// 	.product-wrapper
+	// 		flex 1 25%
+	// 		max-width 25%
 			// flex 1 33.333%
 			// max-width 33.333%
 
