--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -87,8 +87,8 @@
 				padding-left 10rem
 				&.moveLeft
 					padding-left 0
-				&.moveRight
-					padding-right 10rem
+				// &.moveRight
+				// 	padding-right 10rem
 
 	.filter
 		width 9rem
