--- a/public/css/products.css
+++ b/public/css/products.css
@@ -587,11 +587,33 @@ body {
   color: #555;
   font-size: 1rem;
 }
-.search i {
+.search > i {
   position: absolute;
   top: 0.5rem;
   left: 0.75em;
   color: #808080;
+}
+.search .text {
+  display: none;
+  background: #008000;
+  color: #fff;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  position: absolute;
+  font-family: 'Raleway';
+  font-weight: 600;
+  top: 0.35rem;
+  left: 2rem;
+}
+.search .text span {
+  padding: 0.275rem 0.5rem;
+  font-size: 0.85rem;
+  display: inline-block;
+  border-right: solid 1px #fff;
+}
+.search .text i {
+  padding: 0.25rem;
+  cursor: pointer;
 }
 .search .options {
   display: none;
@@ -1009,9 +1031,6 @@ body {
   }
   .section__workspace__elements.moveLeft {
     padding-left: 0;
-  }
-  .section__workspace__elements.moveRight {
-    padding-right: 10rem;
   }
   .filter {
     width: 9rem;
@@ -1443,16 +1462,6 @@ body {
     flex: 1 25%;
     max-width: 25%;
   }
-  .products.moveRight .product-wrapper {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
-    -webkit-flex: 1 33.333%;
-    -ms-flex: 1 33.333%;
-    flex: 1 33.333%;
-    max-width: 33.333%;
-  }
   .products.moveLeft .product-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
@@ -1462,16 +1471,6 @@ body {
     -ms-flex: 1 20%;
     flex: 1 20%;
     max-width: 20%;
-  }
-  .products.moveLeft.moveRight .product-wrapper {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
-    -webkit-flex: 1 25%;
-    -ms-flex: 1 25%;
-    flex: 1 25%;
-    max-width: 25%;
   }
 }
 .collect {
