--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -33,11 +33,29 @@
 		padding .5em 0 .5em 2em
 		color #555
 		font-size 1rem
-	i
+	> i
 		position absolute
 		top .5rem
 		left .75em
 		color gray
+	.text
+		display none
+		background: green;
+		color: white;
+		border-radius: 5px;
+		position: absolute;
+		font-family: 'Raleway';
+		font-weight: 600;
+		top: .35rem;
+		left: 2rem;
+		span
+			padding: .275rem .5rem;
+			font-size: .85rem;
+			display inline-block
+			border-right: solid 1px white;
+		i
+			padding: 0.25rem;
+			cursor pointer
 	.options
 		display none
 		font-family 'Raleway'
@@ -95,7 +113,7 @@
 				border-radius 50%
 				margin auto
 				display block
-			
+
 	.button-solid
 		margin 1.5rem auto
 		display table
@@ -149,7 +167,7 @@
 	// 			&:not(:first-child)
 	// 				background blue
 	// 				margin-left .5rem
-					
+
 // .shipping-container
 // 	border solid 1px #ddd
 // 	box-shadow rgba(0,0,0,0.35) 0 0 10px
