--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -45,7 +45,7 @@
 					</div>
 
 					<div class="wish-list">
-						<span class="button-wish-list"> <i class="fa fa-square-o"></i></span>
+						<span class="button-wish-list"> <i class="fa fa-check-square-o"></i></span>
 					</div>
 				</div>
 			</article>
