--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -25,6 +25,13 @@
 
 				<div class="product-info">
 					<div class="price">s./<%= price %></div>
+
+					<div class="users">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+					</div>
+
 					<div class="like">
 						<span class="button-like <% if (liked) { %>active<% } %>"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span><%= likes %></span> </span>
 					</div>
