--- a/app/views/partials/auth.html
+++ b/app/views/partials/auth.html
@@ -17,7 +17,7 @@
 
 		{% if path == 'signup' %}
 			<form class="auth__form">
-				
+
 				<div class="loading"><i class="fa fa-spinner"></i></div>
 				<a href="/auth/facebook" class="facebook-button" data-expand='true'>
 					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
@@ -28,30 +28,30 @@
 					<span class="text">Con email</span>
 					<span class="line"></span>
 				</p>
-				
-				<input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
-				<p class="username-error"></p>
-				
+
+				<!-- <input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
+				<p class="username-error"></p> -->
+
 				<input class="input" data-size='large' name="email" placeholder="Email" type="email" value="{{profile.email}}">
 				<p class="email-error"></p>
-				
+
 				<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
 				<p class="password-error"></p>
-				
+
 				<input class="input" data-size='large' name="firstname" placeholder="Nombres" type="text" value="{{profile.first_name}}">
 				<p class="firstname-error"></p>
 
 				<input class="input" data-size='large' name="lastname" placeholder="Apellidos" type="text" value="{{profile.last_name}}">
 				<p class="lastname-error"></p>
 
-				<select class="input" name="gender">
+				<!-- <select class="input" name="gender">
 					<option disabled {% if !profile.gender %}selected{% endif %}>Género</option>
 					<option value="Male" {% if profile.gender === 'male' %}selected{% endif %}>Masculino</option>
 					<option value="Female" {% if profile.gender === 'female' %}selected{% endif %}>Femenino</option>
-				</select>
-				
+				</select> -->
+
 				<div class="g-recaptcha" data-sitekey="6LcbDwcTAAAAAIexPkpMRGp4fTveLvMzll_XPH3Q"></div>
-				
+
 				<div class="question">
 					<input name="isArtist" type="checkbox" value="true" id="isArtist">
 					<label for="isArtist" class="medium-text">¿Eres Artista profesional?</label>
@@ -59,7 +59,7 @@
 
 				<div class="loading"><i class="fa fa-spinner"></i></div>
 				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
-				
+
 				<p class="italic-text" data-size="small">
 					Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto
 				</p>
@@ -102,11 +102,11 @@
 
 				<div class="loading"><i class="fa fa-spinner"></i></div>
 				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
-				
+
 				<p class="italic-text" data-size="small">Ingresar</p>
 
 			</form>
 		{% endif %}
-		
+
 	</div>
 </section>
