--- a/app/views/pages/interests.html
+++ b/app/views/pages/interests.html
@@ -10,6 +10,176 @@
 {% block elements %}
 
 	<div class="Profile">
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Datos Basicos</p>
+			<div class="column">
+				<div class="Profile-section-avatar">
+					<div class="Profile-section-avatar-img">
+						<img src="http://www.furcontest.com/imagenes/default.png">
+					</div>
+					<div class="Profile-section-avatar-options">
+						<div class="Profile-section-avatar-option">
+							<input type="radio" name="avatar" value="custom" id="avatar-custom">
+							<label class="medium-text" for="avatar-custom">Personalizada</label>
+						</div>
+						<div class="Profile-section-avatar-option">
+							<input type="radio" name="avatar" value="facebook" id="avatar-facebook" checked>
+							<label class="medium-text" for="avatar-facebook">Facebook</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<div class="Profile-section-input">
+					<input class="input" type="text" name="username" placeholder="username">
+				</div>
+				<div class="Profile-section-input column2">
+					<input class="input" type="text" name="ciudad" placeholder="ciudad">
+				</div>
+				<div class="Profile-section-input column2">
+					<input class="input" type="text" name="pais" placeholder="pais">
+				</div>
+				<div class="Profile-section-input">
+					<select class="input" name="gender">
+						<option disabled selected>Género</option>
+						<option value="Male">Masculino</option>
+						<option value="Female">Femenino</option>
+					</select>
+				</div>
+				<div class="Profile-section-input">
+					<input class="input" type="text" name="fecha-nacimiento" placeholder="fecha-nacimiento">
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Redes sociales</p>
+			<div class="column">
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="facebook" placeholder="facebook">
+				</div>
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="twitter" placeholder="twitter">
+				</div>
+			</div>
+			<div class="column">
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="behance" placeholder="behance">
+				</div>
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="tumblr" placeholder="tumblr">
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Mi Manifiesto</p>
+			<div class="Profile-section-textarea">
+				<textarea class="input textarea"></textarea>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Intereses</p>
+			<div class="Profile-section-options">
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Especialidades</p>
+			<div class="Profile-section-input">
+				<ul class="checkbox-list">
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="arte-urbano"> <span>Arte Urbano</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="collage"> <span>Collage</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="dibujo"> <span>Dibujo</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="fotografa"> <span>Fotografía</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="grabado"> <span>Grabado</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="ilustracin"> <span>Ilustración</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="instalacin"> <span>Instalación</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="pintura"> <span>Pintura</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="tcnica-mixta"> <span>Técnica Mixta</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="digital"> <span>Digital</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="escultura"> <span>Escultura</span>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<button class="button-solid" data-color='red'>Guardar</button>
+	</div>
+
+{% endblock %}
+
+
+{% block scripts %}
+
+{% endblock %}
+
+	<!-- <div class="Profile">
 		<div class="Profile-inner">
 			<div class="Profile-section">
 				<p class="Profile-section-title section-title-text">Datos Basicos</p>
@@ -59,20 +229,10 @@
 					<textarea class="input textarea"></textarea>
 				</div>
 			</div>
-			<div class="Profile-section">
-				<div class="Profile-section-button">
-					<button class="button-solid" data-color='red'>Guardar</button>
-				</div>
-			</div>
 		</div>
-	</div>
+		<button class="button-solid" data-color='red'>Guardar</button>
+	</div> -->
 
-{% endblock %}
-
-
-{% block scripts %}
-
-{% endblock %}
 <!-- 				<div class="Profile-section-inputDouble">
 					<span>www.artemanifiesto.com/</span>
 					<span>
