--- a/public/css/complite-profile.css
+++ b/public/css/complite-profile.css
@@ -876,39 +876,142 @@ body {
   font-size: 0.9rem;
 }
 .Profile {
-  max-width: 1100px;
+  max-width: 733.3333333333334px;
   margin: auto;
-  padding: 2rem 1rem;
-}
-.Profile-inner {
-  border: 1px solid #ddd;
+  padding: 0.25rem;
 }
 .Profile-section {
-  padding: 1.5rem 1rem;
+  padding: 0.25rem;
 }
-.Profile-section:not(:last-child) {
-  border-bottom: 1px solid #ddd;
+.Profile-section-title,
+.Profile-section-input,
+.Profile-section-textarea,
+.Profile-section-avatar {
+  margin: 0.5rem;
 }
 .Profile-section-title {
   font-size: 1.15rem;
 }
-.Profile-section-input,
-.Profile-section-textarea {
-  margin: 0.5rem;
-}
-.Profile-section-button {
-  display: table;
+.Profile-section-avatar-img {
+  max-width: 120px;
   margin: auto;
 }
-@media (min-width: 1000px) {
-  .Profile-section-input {
-    display: inline-block;
-    vertical-align: top;
-    width: 47.85%;
+.Profile-section-avatar-options {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.Profile-section-avatar-option {
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.Profile-section-avatar-option label {
+  font-size: 0.7rem;
+}
+.Profile-section-options {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.Profile-section-option {
+  max-width: 150px;
+  background: #f6f6f6;
+  margin: 0.5rem;
+}
+.Profile-section-option img,
+.Profile-section-option p {
+  padding: 0.5rem;
+}
+.Profile-section-option p {
+  font-family: 'Raleway';
+  cursor: pointer;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  text-align: center;
+}
+.Profile button {
+  display: table;
+  margin: 1rem auto;
+}
+.checkbox-list {
+  max-height: 200px;
+  overflow: auto;
+}
+.checkbox-list__item {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 0.25rem;
+  font-family: 'Raleway';
+  cursor: pointer;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+.checkbox-list__item:hover {
+  background: #eee;
+}
+.checkbox-list__item span {
+  padding-left: 0.25rem;
+}
+@media (min-width: 720px) {
+  .carousel {
+    height: 10.65rem;
   }
+}
+@media (min-width: 1000px) {
   .column {
-    width: 50%;
+    width: 49.715%;
     display: inline-block;
     vertical-align: top;
+  }
+  .column2 {
+    display: inline-block;
+    vertical-align: top;
+    width: 44.9%;
+    margin: 0 0.5rem;
   }
 }
