--- a/public/css/complite-profile.css
+++ b/public/css/complite-profile.css
@@ -875,6 +875,9 @@ body {
   margin: 1rem 0.5rem;
   font-size: 0.9rem;
 }
+.input {
+  font-size: 0.9rem;
+}
 .Profile {
   max-width: 733.3333333333334px;
   margin: auto;
@@ -888,6 +891,34 @@ body {
 .Profile-section-textarea,
 .Profile-section-avatar {
   margin: 0.5rem;
+}
+.Profile-section-input {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.Profile-section-input span {
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  font-size: 0.85rem;
+}
+.Profile-section-input div {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 .Profile-section-title {
   font-size: 1.15rem;
@@ -949,7 +980,7 @@ body {
   justify-content: center;
 }
 .Profile-section-option {
-  max-width: 150px;
+  max-width: 200px;
   background: #f6f6f6;
   margin: 0.5rem;
 }
@@ -1003,6 +1034,9 @@ body {
   }
 }
 @media (min-width: 1000px) {
+  .Profile {
+    max-width: 880px;
+  }
   .column {
     width: 49.715%;
     display: inline-block;
@@ -1011,7 +1045,7 @@ body {
   .column2 {
     display: inline-block;
     vertical-align: top;
-    width: 44.9%;
+    width: 45.813%;
     margin: 0 0.5rem;
   }
 }
