--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,112 +1,199 @@
 {% extends '../partials/base.html' %}
 
-{% set path = 'profile' %}
-{% set title = 'Arte Manifiesto' %}
-{% set css = 'profile' %}
+{% set path = 'interests' %}
+{% set title = 'Arte Manifiesto | Completar Perfil' %}
+
+{% block stylesheets %}
+	<link rel="stylesheet" type="text/css" href="/css/complite-profile.css">
+{% endblock %}
 
 {% block elements %}
 
-<!-- <section class="works" data-columns>
-</section> -->
+	<div class="Profile">
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Datos Basicos</p>
+			<div class="column">
+				<div class="Profile-section-avatar">
+					<div class="Profile-section-avatar-img">
+						<img src="http://www.furcontest.com/imagenes/default.png">
+						<div class="cover">
+							<i class="fa fa-camera"></i>
+							<input type="file">
+						</div>
+					</div>
+					<div class="Profile-section-avatar-options">
+						<div class="Profile-section-avatar-option">
+							<input type="radio" name="avatar" value="custom" id="avatar-custom">
+							<label class="medium-text" for="avatar-custom">Personalizada</label>
+						</div>
+						<div class="Profile-section-avatar-option">
+							<input type="radio" name="avatar" value="facebook" id="avatar-facebook" checked>
+							<label class="medium-text" for="avatar-facebook">Facebook</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<div class="Profile-section-input">
+					<span>artemanifiesto.com/</span>&nbsp;
+					<div>
+						<input class="input" type="text" name="username" placeholder="username">
+					</div>
+				</div>
+				<div class="Profile-section-input column2">
+					<input class="input" type="text" name="ciudad" placeholder="ciudad">
+				</div>
+				<div class="Profile-section-input column2">
+					<input class="input" type="text" name="pais" placeholder="pais">
+				</div>
+				<div class="Profile-section-input">
+					<select class="input" name="gender">
+						<option disabled selected>Género</option>
+						<option value="Male">Masculino</option>
+						<option value="Female">Femenino</option>
+					</select>
+				</div>
+				<div class="Profile-section-input">
+					<span>Fecha de nacimiento</span>&nbsp;
+					<div>
+						<input class="input" type="date" name="fecha-nacimiento" placeholder="fecha-nacimiento">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Redes sociales</p>
+			<div class="column">
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="facebook" placeholder="facebook">
+				</div>
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="twitter" placeholder="twitter">
+				</div>
+			</div>
+			<div class="column">
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="behance" placeholder="behance">
+				</div>
+				<div class="Profile-section-input">
+					<input class="input" type="url" name="tumblr" placeholder="tumblr">
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Mi Manifiesto</p>
+			<div class="Profile-section-textarea">
+				<textarea class="input textarea"></textarea>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Intereses</p>
+			<div class="Profile-section-options">
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+				<div class="Profile-section-option">
+					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
+					<p>Arte Urbano</p>
+				</div>
+			</div>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Especialidades</p>
+			<!-- <div class="Profile-section-input"> -->
+				<ul class="checkbox-list">
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="arte-urbano"> <span>Arte Urbano</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="collage"> <span>Collage</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="dibujo"> <span>Dibujo</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="fotografa"> <span>Fotografía</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="grabado"> <span>Grabado</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="ilustracin"> <span>Ilustración</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="instalacin"> <span>Instalación</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="pintura"> <span>Pintura</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="tcnica-mixta"> <span>Técnica Mixta</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="digital"> <span>Digital</span>
+					</li>
+					<li class="checkbox-list__item">
+						<input type="checkbox" name="category" value="escultura"> <span>Escultura</span>
+					</li>
+				</ul>
+			<!-- </div> -->
+		</div>
+		<button class="button-solid" data-color='red'>Guardar</button>
+	</div>
 
-<!--
-<section class="products">
-</section>
--->
-
-<!--
-<section class="users">
-</section>
--->
-
-<!-- <section class="collections">
-</section>
- -->
 {% endblock %}
+
+
 {% block scripts %}
-<!--
-<script>
-    var user = {{user | json | safe}};
-</script>
- -->
-<!-- <script src="/js/vendor/jquery.min.js"></script>
-<script src="/js/vendor/hammer.min.js"></script>
-<script src="/js/vendor/underscore-min.js"></script>
-<script src="/js/vendor/salvattore.js"></script>
-<script src="/js/vendor/masonry.pkgd.min.js"></script>
-<script src="/js/app.min.js"></script>
- -->
-
-<script>
-    // $(function () {
-    // });
-
-        // new APP.RestClientManager();
-        // new APP.TemplateManager();
-
-        // var templates = ['work', 'product', 'user', 'collection'];
-        // APP.TemplateManager.instance.loadTemplates(templates).done(function () {
-        //     console.log('templates loaded');
-        // });
-
-            /*APP.RestClientManager.instance.execute({
-             url: DataApp.searchCollections,
-             method: 'post'
-             }).done(function (data) {
-             var i, collection;
-             var container = $('.collections');
-             for (i = 0; i < data.collections.length; i++) {
-             collection = new APP.Collection(data.collections[i]);
-             container.append(collection.view);
-             }
-             });*/
-
-        /*
-         APP.TemplateManager.instance.loadTemplateById('work', function () {
-         APP.RestClientManager.instance.execute({
-         url: DataApp.searchWorks,
-         method: 'post'
-         }).done(function (data) {
-         var i, work;
-         var container = $('.works')[0];
-         for (i = 0; i < data.works.length; i++) {
-         data.works[i].index = i + 1;
-         work = new APP.Work(data.works[i]);
-         salvattore.appendElements(container, [work.rawView]);
-         }
-         });
-         });
-         */
-
-        /*
-         APP.TemplateManager.instance.loadTemplateById('product', function () {
-         APP.RestClientManager.instance.execute({
-         url: DataApp.searchProducts,
-         method: 'post'
-         }).done(function (data) {
-         var i, product;
-         var container = $('.products');
-         for (i = 0; i < data.products.length; i++) {
-         product = new APP.Product(data.products[i]);
-         container.append(product.view);
-         }
-         });
-         });
-         */
-
-        /*APP.TemplateManager.instance.loadTemplateById('user', function () {
-         APP.RestClientManager.instance.execute({
-         url: DataApp.searchUsers,
-         method: 'post'
-         }).done(function (data) {
-         var i, user;
-         var container = $('.users');
-         for (i = 0; i < data.users.length; i++) {
-         user = new APP.User(data.users[i]);
-         container.append(user.view);
-         }
-         });
-         });*/
-</script>
-
+	<script type="text/javascript" src="/js/complite-profile.js"></script>
 {% endblock %}
