--- a/app/views/pages/interests.html
+++ b/app/views/pages/interests.html
@@ -1,194 +1,223 @@
 {% extends '../partials/base.html' %}
 
 {% set path = 'interests' %}
-{% set title = 'Arte Manifiesto | Completar Perfil' %}
-
-{% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="/css/complite-profile.css">
-{% endblock %}
+{% set title = 'Arte Manifiesto | Intereses' %}
+{% set css = 'interests' %}
 
 {% block elements %}
 
-	<div class="Profile">
-		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Datos Basicos</p>
-			<div class="column">
-				<div class="Profile-section-avatar">
-					<div class="Profile-section-avatar-img">
-						<img src="http://www.furcontest.com/imagenes/default.png">
-					</div>
-					<div class="Profile-section-avatar-options">
-						<div class="Profile-section-avatar-option">
-							<input type="radio" name="avatar" value="custom" id="avatar-custom">
-							<label class="medium-text" for="avatar-custom">Personalizada</label>
-						</div>
-						<div class="Profile-section-avatar-option">
-							<input type="radio" name="avatar" value="facebook" id="avatar-facebook" checked>
-							<label class="medium-text" for="avatar-facebook">Facebook</label>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="Profile-section-input">
-					<span>artemanifiesto.com/</span>&nbsp;
-					<div>
-						<input class="input" type="text" name="username" placeholder="username">
-					</div>
-				</div>
+<p class="title">¿Qué obras te interesan?</p>
 
-<!-- 				<div class="Profile-section-input column2">
-					<span>ciudad</span>&nbsp;
-					<div>
-						<input class="input" type="text" name="ciudad">
-					</div>
-				</div> -->
-				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="ciudad" placeholder="ciudad">
-				</div>
+<section class="insterts">
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/4/reg/pencilnecklace.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_5s/4/reg/_DSC0160_large.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/4/reg/tween-tank.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/4/reg/Screen_Shot_2012-11-30_at_12.52.21_PM.png">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/4/reg/Screen_Shot_2012-11-30_at_12.51.07_PM.png">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/4/reg/il_570xN.264801675_large.jpeg">
+			</div>
+		</div>
+	</article>
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/6/reg/IMG_7734_original.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/6/reg/pillows-couch-2_original_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/6/reg/babyjambo_large_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_5s/6/reg/garland.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/6/reg/clips_large_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/6/reg/mother.jpg">
+			</div>
+		</div>
+	</article>
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/3/reg/fashionista_bracelet.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/3/reg/DSC_0999_web_original.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/3/reg/fashionista_ring.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/3/reg/tribal1_large_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_5s/3/reg/fashionista_purse.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/3/reg/fashionista_earrings.jpeg">
+			</div>
+		</div>
+	</article>
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/1/reg/design_ampersand.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/1/reg/Design_Hightops.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/1/reg/il_fullxfull.179361257_large_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/1/reg/photo_original_(2).jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_5s/1/reg/Pocket_BluePlanted2_large.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/1/reg/Screen_Shot_2012-11-30_at_12.45.25_PM.png">
+			</div>
+		</div>
+	</article>
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_5s/5/reg/flannel_use1_large.jpeg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/5/reg/19_original_copy.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/5/reg/Taste_Young_Male.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/5/reg/cardigan.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/5/reg/Tast_Young_Male_2.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/5/reg/yp_glasses.jpeg">
+			</div>
+		</div>
+	</article>
+	<article class="interest">
+		<div class="inner">
+			<div class="cover">
+				<i class="fa fa-check"></i>
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_2s/2/reg/profound-aesthetic-bird-hat-9-600x600_original.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/2/reg/nike-air-jordan-5-retro-bel-air-1_original.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_4s/2/reg/headphones_(1).jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_3s/5/reg/cardigan.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_1s/2/reg/9586109_original.jpg">
+			</div>
+			<div class="img-container">
+				<img src="//dpegb9ebondhq.cloudfront.net/taste_categories/photo_6s/2/reg/Eboy_original.jpg">
+			</div>
+		</div>
+	</article>
+</section>
 
-				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="pais" placeholder="pais">
-				</div>
-				<div class="Profile-section-input">
-					<select class="input" name="gender">
-						<option disabled selected>Género</option>
-						<option value="Male">Masculino</option>
-						<option value="Female">Femenino</option>
-					</select>
-				</div>
-				<div class="Profile-section-input">
-					<span>Fecha de nacimiento</span>&nbsp;
-					<div>
-						<input class="input" type="date" name="fecha-nacimiento" placeholder="fecha-nacimiento">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Redes sociales</p>
-			<div class="column">
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="facebook" placeholder="facebook">
-				</div>
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="twitter" placeholder="twitter">
-				</div>
-			</div>
-			<div class="column">
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="behance" placeholder="behance">
-				</div>
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="tumblr" placeholder="tumblr">
-				</div>
-			</div>
-		</div>
-		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Mi Manifiesto</p>
-			<div class="Profile-section-textarea">
-				<textarea class="input textarea"></textarea>
-			</div>
-		</div>
-		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Intereses</p>
-			<div class="Profile-section-options">
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-				<div class="Profile-section-option">
-					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-					<p>Arte Urbano</p>
-				</div>
-			</div>
-		</div>
-		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Especialidades</p>
-			<!-- <div class="Profile-section-input"> -->
-				<ul class="checkbox-list">
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="arte-urbano"> <span>Arte Urbano</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="collage"> <span>Collage</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="dibujo"> <span>Dibujo</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="fotografa"> <span>Fotografía</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="grabado"> <span>Grabado</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="ilustracin"> <span>Ilustración</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="instalacin"> <span>Instalación</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="pintura"> <span>Pintura</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="tcnica-mixta"> <span>Técnica Mixta</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="digital"> <span>Digital</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="escultura"> <span>Escultura</span>
-					</li>
-				</ul>
-			<!-- </div> -->
-		</div>
-		<button class="button-solid" data-color='red'>Guardar</button>
-	</div>
+<p class="interest-error">Minimo 2 opciones</p>
+
+<button class="button-solid" data-color='red'>Continuar</button>
 
 {% endblock %}
 
 
 {% block scripts %}
-	<script type="text/javascript" src="/js/complite-profile.js"></script>
+
+<script type="text/javascript">
+	var user = {{ user|json|safe }}
+	console.log('user: ', user)
+	function Interests (el, data) {
+		var interests = el.querySelectorAll('.interest'),
+				submit = document.querySelector('.button-solid'),
+				interestError = document.querySelector('.interest-error');
+		function setup () {
+			// console.log('setup')
+			for (var i = interests.length - 1; i >= 0; i--)
+				interests[i].setAttribute('selected', false)
+			for (var i = interests.length - 1; i >= 0; i--) {
+				interests[i].addEventListener('click', function () {
+					// console.log('this: ', this)
+					var selected = this.getAttribute('selected')
+					// console.log('selected: ', selected)
+					if(selected == 'true') {
+						// console.log('selected')
+						this.classList.remove('active')
+						this.setAttribute('selected', false)
+					} else {
+						// console.log('no selected')
+						this.classList.add('active')
+						this.setAttribute('selected', true)
+					}
+				})
+			}
+			submit.addEventListener('click', send)
+		}
+		function send () {
+			var ret = []
+			for (var i = interests.length - 1; i >= 0; i--){
+				var selected = interests[i].getAttribute('selected')
+				if(selected == 'true') {
+					ret.push(i)
+				}
+			}
+			if(ret.length == 0){
+				console.log('error')
+				interestError.style.display = 'block'
+			} else {
+				interestError.style.display = 'none'
+				console.log('ret: ', ret)
+			}
+		}
+		setup()
+	}
+	window.interests = new Interests(document.querySelector('.insterts'))
+</script>
+
 {% endblock %}
