--- a/public/css/complite-profile.css
+++ b/public/css/complite-profile.css
@@ -926,6 +926,39 @@ body {
 .Profile-section-avatar-img {
   max-width: 120px;
   margin: auto;
+  position: relative;
+}
+.Profile-section-avatar-img:hover .cover {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.Profile-section-avatar-img .cover {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.25);
+  display: none;
+}
+.Profile-section-avatar-img .cover i {
+  margin: auto;
+  font-size: 2rem;
+  color: #fff;
+}
+.Profile-section-avatar-img .cover input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  cursor: pointer;
 }
 .Profile-section-avatar-options {
   display: -webkit-box;
@@ -983,6 +1016,31 @@ body {
   max-width: 200px;
   background: #f6f6f6;
   margin: 0.5rem;
+  position: relative;
+  cursor: pointer;
+}
+.Profile-section-option .cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.Profile-section-option .cover .fa {
+  margin: auto;
+  color: #fff;
+  font-size: 2rem;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0.5rem;
+  background: #f54545;
+  border: solid 5px #fff;
 }
 .Profile-section-option img,
 .Profile-section-option p {
