add complete profile implementation

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -41,10 +41,10 @@
 					</div>
 				</div>
 				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="ciudad" placeholder="ciudad">
+					<input class="input" type="text" name="city" placeholder="ciudad">
 				</div>
 				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="pais" placeholder="pais">
+					<input class="input" type="text" name="country" placeholder="pais">
 				</div>
 				<div class="Profile-section-input">
 					<select class="input" name="gender">
@@ -56,7 +56,7 @@
 				<div class="Profile-section-input">
 					<span>Fecha de nacimiento</span>&nbsp;
 					<div>
-						<input class="input" type="date" name="fecha-nacimiento" placeholder="fecha-nacimiento">
+						<input class="input" type="date" name="birthday" placeholder="fecha-nacimiento">
 					</div>
 				</div>
 			</div>
@@ -92,6 +92,9 @@
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
@@ -103,6 +106,9 @@
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
@@ -114,6 +120,9 @@
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
@@ -125,67 +134,85 @@
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 				<div class="Profile-section-option">
 					<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
 					<p>Arte Urbano</p>
+					<div class="cover">
+						<i class="fa fa-check"></i>
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="Profile-section">
 			<p class="Profile-section-title section-title-text">Especialidades</p>
 			<!-- <div class="Profile-section-input"> -->
-				<ul class="checkbox-list">
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="arte-urbano"> <span>Arte Urbano</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="collage"> <span>Collage</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="dibujo"> <span>Dibujo</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="fotografa"> <span>Fotografía</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="grabado"> <span>Grabado</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="ilustracin"> <span>Ilustración</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="instalacin"> <span>Instalación</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="pintura"> <span>Pintura</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="tcnica-mixta"> <span>Técnica Mixta</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="digital"> <span>Digital</span>
-					</li>
-					<li class="checkbox-list__item">
-						<input type="checkbox" name="category" value="escultura"> <span>Escultura</span>
-					</li>
-				</ul>
+			<ul class="checkbox-list">
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="arte-urbano"> <span>Arte Urbano</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="collage"> <span>Collage</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="dibujo"> <span>Dibujo</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="fotografa"> <span>Fotografía</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="grabado"> <span>Grabado</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="ilustracin"> <span>Ilustración</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="instalacin"> <span>Instalación</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="pintura"> <span>Pintura</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="tcnica-mixta"> <span>Técnica Mixta</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="digital"> <span>Digital</span>
+				</li>
+				<li class="checkbox-list__item">
+					<input type="checkbox" name="category" value="escultura"> <span>Escultura</span>
+				</li>
+			</ul>
 			<!-- </div> -->
 		</div>
 		<button class="button-solid" data-color='red'>Guardar</button>
